--- a/static/global.css
+++ b/static/global.css
@@ -1,5 +1,6 @@
 * {
     font-family: Bahnschrift, sans-serif;
+    font-size: clamp(1rem, 1vw, 1.2rem);
     color: #EBEBEB;
 }
 
@@ -10,7 +11,7 @@ header {
 }
 
 body {
-    height: 100vh;
+    min-height: 100vh;
     background-color: #161314;
     color: #EBEBEB;
     margin: 0;
@@ -30,10 +31,13 @@ body {
     border: 0;
 }
 
-@media only screen and (max-width: 768px){
-    .navbar > ul > li {
-        display: block;
-    }
+#show_sidebar, #hide_sidebar{
+    min-height: 20px;
+    padding-top: 6px;
+    padding-right: 10px;
+    padding-bottom: 6px;
+    width: auto;
+    display: none;
 }
 
 .navbar > ul > li:hover {
@@ -50,6 +54,58 @@ body {
 
 .navbar > ul > li > a:hover{
     color: #17599f;
+}
+
+@media (max-width: 600px){
+
+    header{
+        min-height: 30px;
+        
+    }
+    .navbar {
+        background-color: #2c2628;
+        align-items: start;
+        justify-content: flex-start;
+        min-height: 100vh;
+        z-index: 20;
+        position: fixed;
+        top: 0;
+        right: -100%;
+        width: 90%;
+        height: 100dvh;
+        z-index: 20;
+        transition: right 0.3s ease-in-out;
+    }
+
+    .show{
+        right: 0;
+    }
+    .navbar > ul {
+        margin: 0;
+        display: flex;
+        flex-direction: column;
+        height: 100%;
+        width: 100%;
+        padding: 0;
+    }
+
+    .navbar > ul > li{
+        width: 100%;
+        display: flex;
+        opacity: 1;
+        flex-direction: column;
+        
+    }
+
+    #show_sidebar, #hide_sidebar{
+    display: flex;
+    max-height: 2rem;
+    max-width: 2rem;
+    aspect-ratio: 1/1;
+    cursor: pointer;
+}
+
+
 }
 
 /* Animaciones
