--- a/static/catalogo.css
+++ b/static/catalogo.css
@@ -77,12 +77,14 @@ select{
     padding: 10px;
     cursor: pointer;
     transition: all 0.3s ease;
+    color: black;
 }
 
 option{
     border: 2px solid #161314;
     border-radius: 20px;
     padding: 10px;
+    color: black;
 }
 
 @media only screen and (max-width: 768px){
