--- a/static/catalogo.css
+++ b/static/catalogo.css
@@ -16,10 +16,11 @@
 .servicio-titulo {
   display:grid;
   grid-template-columns: 60% 30%;
-  grid-column-gap: 10%;
+  grid-column-gap: 5%;
   grid-row: auto auto;
   img {
-    width: 150px;
+    width: 100%;
+    max-width: 180px;
     height: 100px;
     border-radius: 20px;
     object-fit: cover;
@@ -104,7 +105,8 @@ option{
     grid-column-gap: 0%;
     grid-row: auto auto;
     img {
-      width: 130px;
+      width: 100%;
+      max-width: 150px;
       height: 100px;
       border-radius: 20px;
       object-fit: cover;
