--- a/templates/user_page.html
+++ b/templates/user_page.html
@@ -46,7 +46,7 @@
           <div class="datos-usuario">
             <input type="text" id="nombre" name="nombre" value="{{ usuario.nombre }}" disabled>
             <input type="email" id="correo" name="correo" value="{{ usuario.correo }}" disabled>
-            <textarea id="user-description" name="user-description" value="{{ usuario.descripcion }}" disabled></textarea>
+            <textarea id="user-description" name="user-description" disabled>{{ usuario.descripcion }}</textarea>
             <div class="botones">
             <button type="button" id="boton-editar">Editar</button>
             <button type="submit" id="guardar" style="display:none">Guardar</button>
