--- a/templates/user_page.html
+++ b/templates/user_page.html
@@ -48,10 +48,11 @@
             <input type="email" id="correo" name="correo" value="{{ usuario.correo }}" disabled>
             <textarea id="user-description" name="user-description" disabled>{{ usuario.descripcion }}</textarea>
             <div class="botones">
-            <button type="button" id="boton-editar">Editar</button>
-            <button type="submit" id="guardar" style="display:none">Guardar</button>
-        </div>
-        </div>
+                <button type="button" id="boton-editar">Editar</button>
+                <button type="submit" id="guardar" style="display:none">Guardar</button>
+            </div>
+          </div>
+          <a class="boton" type="button" id="cerrar-sesion" href="/cerrar-sesion">Cerrar Sesión</a>
         </div>
 
         
