--- a/static/servicios.css
+++ b/static/servicios.css
@@ -9,6 +9,7 @@
 .descripcion-servicio {
     display: block;
     margin: 0 auto;
+    padding: 10px;
 }
 
 .descripcion-servicio p {
@@ -107,4 +108,9 @@ button {
     to {
         opacity: 1;
     }
+}
+h1 {
+  text-align: center;
+  font-size: 4rem;
+
 }
