--- a/templates/cargaServicio.html
+++ b/templates/cargaServicio.html
@@ -83,6 +83,9 @@
     <div id="revenue-summary" class="ganancias-box">
       <!-- Contenido generado por JS -->
     </div>
+    <div class="calendar FadeUp" id="calendar">
+        <!-- Contenido generado por JS -->
+    </div>
   </section>
 
   <script src="../static/mis_servicios.js"></script>
